<resources>
    <string name="app_name">Borrow Money Info</string>
    <string name="app_intro">You can use in 100+ country and 4000+ city on just instant loan. You can change your interest and tenure anytime from anywhere</string>
    <string name="app_name_"><font fgcolor='#428ACC'>Borrow</font><font fgcolor='#000'> Money Info</font></string>
    <string name="share_app_message">Loan advise using this app. Download Now</string>
    <string name="want_to_exit"><font fgcolor='#000'>Exit</font><font fgcolor='#FF0000'>\nAre you sure</font><font fgcolor='#000'>\nyou want to exit?</font></string>
    <string name="locate_office">✤ Visit the EPFO website and click on the “Locate an EPFO Office” option.\n✤ Alternatively, click on the link http://search.epfoservices.org:81/locate_office/office_location.php to find EPFO offices directly.\n✤ In case you want to know the EPF office having jurisdiction over an address, select the first option.\n✤ Now select your state or union territory from the drop down list and select the district where you want to locate the EPF office.\n✤ Results will be displayed containing the details of the regional office and the office under whose administrative control the office is operating.\n✤ In case you want to know the jurisdiction of an EPF office, then click on the second option and select the office from the drop down menu and click on the submit button. The result displayed contains the complete address of the office and e-mail address of concerned authorities.\n✤ Results are displayed on the screen mentioning the state, district, jurisdiction area and the jurisdiction status of the office.</string>
    <string name="balance_online">✤ Log in to the EPFO website and click on the Our Services tab.\n✤ Choose the For Employees option from the drop-down menu.\n✤On the login page, enter the username which is the UAN and password to log in.\n✤Once logged in, employees can access their EPF details.\n✤Click on the respective passbook to check your EPF balance with different employers.</string>
    <string name="Activate_UNA">✤ Ways to Check EPF Balance Online\n✤The EPFO has been introducing new methods for employees to check the EPF balance and is in the process of developing the existing platforms that can be used.\n✤ Online Portal\n✤ SMS Service\n✤ Missed Call</string>
    <string name="Pensioners">✤ EPFO introduced a new system to facilitate online submission of transfer claims by Members with an objective to make the transfer process transparent, efficient and comfortable for your employees.\n✤ You are urged to bring this facility to the notice of all your employees which is available on EPFOs Member portal.\n✤ A member has an option to submit his claim either through his present employer or the previous one.\n✤ You can see all such claim requests with ease, verify/correct member details, approve and submit the requests online through this portal.\n✤ For online submission of the claims, the Digital signature (Class II or above) of the authorized person is required.</string>
    <string name="TRRN_Status">✤ Visit the EPF Portal and click on ‘Our Services’ on the dashboard and click on For Employees.\n✤ Click on Member Passbook\n✤ The following details must be populated to log in to access the account.</string>
    <string name="FAQ">✤ EPFO Recruitment 2019 Free Job alert for both Fresher and Experienced Candidates updated on March 12, 2019.\n✤ Get Direct Official Link for applying EPFO Recruitment 2019 along with current EPFO Recruitment official Notification 2019 here.\n✤ Find all recent EPFO Vacancy 2019 across India and check all latest EPFO 2019 job openings instantly here, Know upcoming EPFO Recruitment 2019 immediately here.</string>
    <string name="YourClaimStatus">✤ Step 1: Login to the Unified Portal of Employees’ Provident Fund (https://unifiedportal.epfindia.gov.in/) and click on For employees, followed by UAN Member e-Sewa.\n✤ Step 2: Enter UAN and password to log in to the portal.\n✤ Step 3: Click on Manage on the top panel and then on KYC\n✤ Step 4: On the next page, under Add KYC tab, provide your bank, PAN and Aadhaar, passport, driving license, election card and ration card details. Then click on submit. After submitting, you can find these details under Pending KYC tab. Once approved by the employer (which would generally take 15 days), it will be shown under Approved KYC tab.\n✤ Linking of your Aadhaar to EPF account will help in faster withdrawal and transfer process and for that, the present employer should have approved and verified the KYC including the employees Aadhaar details.</string>
    <string name="epf_online_title10_detail">✤ View all Tender Notifications issued by Employees Provident Fund Organisation.\n✤ Search live eProcurement business opportunities available in EPFO Tenders section.\n✤ Employees Provident Fund Organisation Tenders are further filtered by Bid Submission Date, Tender Value, Project Location and Product Category.\n✤Get email alert on Tenders from Employees Provident Fund Organisation - (EPFO).</string>
    <string name="epf_online_title11_detail">✤ Step 1: Login to the Unified Portal of Employees’ Provident Fund (https://unifiedportal.epfindia.gov.in/) and click on For employees, followed by UAN Member e-Sewa.\n✤ Step 2: Enter UAN and password to log in to the portal.\n✤ Step 3: Click on Manage on the top panel and then on KYC\n✤ Step 4: On the next page, under Add KYC tab, provide your bank, PAN and Aadhaar, passport, driving license, election card and ration card details. Then click on submit. After submitting, you can find these details under Pending KYC tab. Once approved by the employer (which would generally take 15 days), it will be shown under Approved KYC tab.\n✤ Linking of your Aadhaar to EPF account will help in faster withdrawal and transfer process and for that, the present employer should have approved and verified the KYC including the employees Aadhaar details.</string>
    <string name="epf_online_title12_detail">✤ EPF 24×7 Customer Care Number and Toll Free Helpline- Employee Provident Fund\n✤ And Head Office Address List Are Blow Plz Click The Button.</string>
    <string name="epf_online_title1_detail">✤ Ways to Check EPF Balance Online\n✤The EPFO has been introducing new methods for employees to check the EPF balance and is in the process of developing the existing platforms that can be used.\n✤ Online Portal\n✤ SMS Service\n✤ Missed Call</string>
    <string name="epf_online_title2_detail">✤ Step 1: Go to the EPFO portal. Click on Our services&gt; For Employees\n✤ Step 2: Click on Know Your PF Status\n✤ Step 3: Enter your UAN and enter the captcha image\n✤ Step 4: Enter the following details\n➺ Enter the state of your PF office\n➺ Select your PF Office from the drop-down menu\n➺ Enter your establishment code\n➺ Enter your Provident Fund account number\n✤ Step 5: Click on the Submit button to check the status of your PF claim.</string>
    <string name="epf_online_title3_detail">✤ EPFO introduced a new system to facilitate online submission of transfer claims by Members with an objective to make the transfer process transparent, efficient and comfortable for your employees.\n✤ You are urged to bring this facility to the notice of all your employees which is available on EPFOs Member portal.\n✤ A member has an option to submit his claim either through his present employer or the previous one.\n✤ You can see all such claim requests with ease, verify/correct member details, approve and submit the requests online through this portal.\n✤ For online submission of the claims, the Digital signature (Class II or above) of the authorized person is required.</string>
    <string name="epf_online_title4_detail">✤ Visit the EPF Portal and click on ‘Our Services’ on the dashboard and click on For Employees.\n✤ Click on Member Passbook\n✤ The following details must be populated to log in to access the account.</string>
    <string name="epf_online_title5_detail">✤ Types of EPF Claim Forms\n✤ Form 19: This is to be filled in case of final settlement of PF account by a member.\n✤ Form 10C: This is to be filled for claiming Scheme Certificate/Withdrawal Benefit as per Employees’ Pension Scheme 95.\n✤ Form 10D: This is to be filled for pension claims.\n✤ Form 20: This is to be filled for claiming PF by legal heir/nominee on death of a member.\n✤ Form 5IF: This is to be filled for claiming assurance benefit as per Employees Deposit Linked Insurance 76 by legal heir/nominee of a member.\n✤ Form 31: For claiming advance/temporary withdrawal as per Employees Provident Scheme 52.\n✤ Form 13: For transferring PF/pension between different accounts.\n✤ Form 14: For financing a life insurance policy out of the PF account</string>
    <string name="epf_online_title6_detail">✤ Multiple job changes typically result in multiple Employee Provident Fund (EPF) accounts being opened, one with each employer.\n✤ With the introduction of the UAN (Universal Account Number), it is possible to consolidate multiple accounts into one single account for each EPFO member.\n✤ Retirement fund body EPFO offers a facility to its members that allows consolidation or merger of their multiple PF accounts with the current universal account number (UAN).</string>
    <string name="epf_online_title7_detail">✤ To avail the e-Passbook facility, you will have to compulsorily register on the EPFO official website. The following details will have to be filled in while registering:\n➺ Your mobile number\n➺ PAN number\n➺ Aadhar Card number\n➺ National Population Register number\n➺ Bank account number\n➺ Voter ID\n➺ Driving license\n➺ Passport number\n➺ Ration Card number\n➺ Your name as on the official documents\n➺ Email ID\n➺ You will get a captcha image, which you must type in the box provided and you will get the PIN.\n➺ The PIN will be received on your registered mobile number via SMS. After you submit the form, you will get a confirmation on your registered mobile and it completes the registration process.\n✤ You can then login to the EPFO Member Portal and check your EPF status online.\n✤ The following is the process to generate your EPF e-Passbook:\n➺ Once you have logged in to the member portal, you will get a screen that you can alter your details and also download e-Passbook from this page.\n➺ When you select download, you will be asked to select the state and you will have to select the PF office of that state.\n➺ If you have no idea which is your PF office, you can find the details at http://epf-india.co.in/ .\n➺ You can then enter the EPF account number and your name that is the same as in your EPFO records.\n➺ Fill in the captcha details and avail the PIN number.\n➺ Enter the pin number that you receive on your registered mobile number via SMS.\n➺ Finally hit the button – Get Detail. You can then download the PDF e-Passbook.\n✤ Remember the following while downloading EPF e-Passbook:\n➺ Only one mobile number can be used for one registration.\n➺ You can however edit the mobile number later on.\n➺ You can see only one EPF account under one establishment.\n➺ You can transfer old EPF account to the new one.\n➺ You will not be able to see settled or inoperative accounts.\n➺ You can register using different ID proofs and mobile number to check the details of the different accounts.\n➺ Your EPF e-Passbook will contain the month and date wise transactions made in your account from the year in which the annual accounts were updated for the establishment.</string>
    <string name="loan_emi_calculater">Loan Calculater</string>
    <string name="principal_amount">Principal Amount</string>
    <string name="loan_tenure">Loan Tenure</string>
    <string name="month">Month</string>
    <string name="reset_calculation">Reset Calculation?</string>
    <string name="year">Year</string>
    <string name="interest">Interest</string>
    <string name="calculate_your_emi">Calculate Your EMI</string>
</resources>